--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body, html {
 /* Body Styles */
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f7f9fc; /* Subtle light background */
+  background-color: #ffffff; /* Subtle light background */
   color: #333;
   margin: 0;
   padding: 0;
